--- a/BarcodeReaderApp/BarcodeReaderApp/BarcodeReaderApp.csproj
+++ b/BarcodeReaderApp/BarcodeReaderApp/BarcodeReaderApp.csproj
@@ -6,5 +6,12 @@
 
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.561731" />
+    <PackageReference Include="ZXing.Net.Mobile.Forms" Version="2.4.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Pages\BarcodeReaderPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
