--- a/BarcodeReaderApp/BarcodeReaderApp.Android/BarcodeReaderApp.Android.csproj
+++ b/BarcodeReaderApp/BarcodeReaderApp.Android/BarcodeReaderApp.Android.csproj
@@ -29,9 +29,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AndroidLinkMode>None</AndroidLinkMode>
-    <AotAssemblies>false</AotAssemblies>
-    <EnableLLVM>false</EnableLLVM>
-    <BundleAssemblies>false</BundleAssemblies>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -62,6 +59,9 @@
     </PackageReference>
     <PackageReference Include="ZXing.Net.Mobile.Forms">
       <Version>2.4.1</Version>
+    </PackageReference>
+    <PackageReference Include="Prism.Unity.Forms">
+      <Version>7.0.0.396</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
@@ -101,7 +101,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BarcodeReaderApp\BarcodeReaderApp.csproj">
-      <Project>{138CDD66-8E42-4F84-8597-2E315226086C}</Project>
+      <Project>{BC057BC7-62CC-4AB1-80DE-5308687EEAA6}</Project>
       <Name>BarcodeReaderApp</Name>
     </ProjectReference>
   </ItemGroup>
