--- a/BarcodeReaderApp/BarcodeReaderApp/BarcodeReaderApp.csproj
+++ b/BarcodeReaderApp/BarcodeReaderApp/BarcodeReaderApp.csproj
@@ -7,11 +7,15 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.561731" />
     <PackageReference Include="ZXing.Net.Mobile.Forms" Version="2.4.1" />
+    <PackageReference Include="Prism.Unity.Forms" Version="7.0.0.396" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Update="Pages\BarcodeReaderPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ViewModels\" />
   </ItemGroup>
 </Project>
