--- a/BarcodeReaderApp/BarcodeReaderApp/BarcodeReaderApp.csproj
+++ b/BarcodeReaderApp/BarcodeReaderApp/BarcodeReaderApp.csproj
@@ -18,5 +18,6 @@
   <ItemGroup>
     <Folder Include="ViewModels\" />
     <Folder Include="Configuration\" />
+    <Folder Include="Models\" />
   </ItemGroup>
 </Project>
