--- a/BarcodeReaderApp/BarcodeReaderApp.iOS/BarcodeReaderApp.iOS.csproj
+++ b/BarcodeReaderApp/BarcodeReaderApp.iOS/BarcodeReaderApp.iOS.csproj
@@ -147,6 +147,9 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Rg.Plugins.Popup">
+      <Version>1.1.4.168</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.561731" />
     <PackageReference Include="ZXing.Net.Mobile.Forms">
       <Version>2.4.1</Version>
