--- a/BarcodeReaderApp/BarcodeReaderApp.Android/BarcodeReaderApp.Android.csproj
+++ b/BarcodeReaderApp/BarcodeReaderApp.Android/BarcodeReaderApp.Android.csproj
@@ -113,5 +113,11 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable-xxxhdpi\warning.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-xxxhdpi\flash_off.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-xxxhdpi\flash_on.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
