Replace flash on/off toolbar icon for a better looking one

--- a/BarcodeReaderApp/BarcodeReaderApp/BarcodeReaderApp.csproj
+++ b/BarcodeReaderApp/BarcodeReaderApp/BarcodeReaderApp.csproj
@@ -16,6 +16,9 @@
     <EmbeddedResource Update="Pages\BarcodeReaderPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Pages\CustomNavigationPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Pages\ProductAlertPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
