--- a/BarcodeReaderApp/BarcodeReaderApp.Android/BarcodeReaderApp.Android.csproj
+++ b/BarcodeReaderApp/BarcodeReaderApp.Android/BarcodeReaderApp.Android.csproj
@@ -114,10 +114,10 @@
     <AndroidResource Include="Resources\drawable-xxxhdpi\warning.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable-xxxhdpi\flash_off.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\light_on.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable-xxxhdpi\flash_on.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\light_off.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
