--- a/BarcodeReaderApp/BarcodeReaderApp.Android/Properties/AndroidManifest.xml
+++ b/BarcodeReaderApp/BarcodeReaderApp.Android/Properties/AndroidManifest.xml
@@ -3,5 +3,5 @@
 	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="27" />
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-permission android:name="android.permission.FLASHLIGHT" />
-	<application android:label="BarcodeReaderApp.Android"></application>
+	<application android:label="Barcode Reader"></application>
 </manifest>
