--- a/BarcodeReaderApp/BarcodeReaderApp.iOS/Info.plist
+++ b/BarcodeReaderApp/BarcodeReaderApp.iOS/Info.plist
@@ -10,20 +10,15 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationPortraitUpsideDown</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>MinimumOSVersion</key>
 	<string>8.0</string>
 	<key>CFBundleDisplayName</key>
-	<string>BarcodeReaderApp</string>
+	<string>Barcode Reader</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.companyname.BarcodeReaderApp</string>
 	<key>CFBundleVersion</key>
@@ -31,10 +26,10 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
-	<string>BarcodeReaderApp</string>
+	<string>Barcode Reader</string>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
 	<key>NSCameraUsageDescription</key>
-	<string>Please allow access to the camera to scan barcodes</string>
+	<string>Por favor, permite acceso a la camera para leer códigos de barra</string>
 </dict>
 </plist>
